sfdx-source/force-app/main/default/objects/Mx_Order_Product_Option__c/Mx_Order_Product_Option__c.object-meta.xml
<CustomObject>
    <description>LEM-14053: It is used to store options for all valid product bundles for Merchant Service Orders.</description>
    <label>Mx Order Product Option</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mx Order Product Options</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>