sfdx-source/force-app/main/default/objects/Mx_Order_Product_Option__c/fields/Assigned_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vendor__c</fullName>
    <description>LEM-14053: It is used to store the possible vendors.</description>
    <label>Assigned Vendor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denali</fullName>
            </value>
            <value>
                <fullName>Social Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>