sfdx-source/force-app/main/default/objects/Mx_Order_Product_Option__c/fields/Mx_Order_Product_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Mx_Order_Product_Bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14053: It is used to map the Product bundle.</description>
    <label>Mx Order Product Bundle</label>
    <referenceTo>Mx_Order_Product_Bundle__c</referenceTo>
    <relationshipLabel>Mx Order Product Options</relationshipLabel>
    <relationshipName>Mx_Order_Product_Options</relationshipName>
    <type>Lookup</type>
</CustomField>