sfdx-source/force-app/main/default/objects/Mx_Order_Product_Option__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-14053: It is used to map the associated Product.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Mx Order Product Options</relationshipLabel>
    <relationshipName>Mx_Order_Product_Option</relationshipName>
    <type>Lookup</type>
</CustomField>