sfdx-source/force-app/main/default/objects/Mx_Order_Product_Option__c/fields/Product_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Option_Name__c</fullName>
    <description>LEM-14053: It is used to store the Product Option name.</description>
    <label>Product Option Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>