sfdx-source/force-app/main/default/objects/Mx_Order_Product_Option__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>LEM-14053: It is used to store the Product SKU</description>
    <formula>Product__r.StockKeepingUnit</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU</label>
    <type>Text</type>
</CustomField>